changed bg color

--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,10 @@
 #bg{
     z-index: -1;
     background: #b28cd9;
+    /* background: linear-gradient(130deg,  #66bdff 0%, #6cccf9 20%, #9dddfb 50%, #8fd6bb 60%, #92d3b8 80%, #8fd6b1 100%); */
+
     background: linear-gradient(90deg,  #ab99de 0%, #b4a3e3 20%, #bcace8 40%, #c3b5eb 60%, #cabeed 80%, #d1c7f0 100%);
+    
     /*filter: blur(1.5rem);*/
     backdrop-filter: blur(1rem);
 }
