--- a/style/style.css
+++ b/style/style.css
@@ -100,6 +100,17 @@
     color: white;
 }
 
+#discord-color{
+    transition:all 0.5s ease;
+    border: #3C4556 1px solid;
+    color: #3C4556;
+}
+
+#discord-color:hover{
+    background-color: #7289DA;
+    color: white;
+}
+
 .botoes{
     transition:all 0.5s ease;
     text-decoration: none;
