--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 #bg{
     z-index: -1;
-    background: #3C4556;
+    background: #C8465F;
     /* background: linear-gradient(130deg,  #66bdff 0%, #6cccf9 20%, #9dddfb 50%, #8fd6bb 60%, #92d3b8 80%, #8fd6b1 100%); */
     /* background: linear-gradient(90deg,  #ab99de 0%, #b4a3e3 20%, #bcace8 40%, #c3b5eb 60%, #cabeed 80%, #d1c7f0 100%); */
     
@@ -28,7 +28,7 @@
 .bordas-img{
     width: 150px;
     border-radius: 100%;
-    border: #3C4556 solid 3px;
+    border: #C8465F solid 3px;
     margin-bottom: 10px;
     margin-top: 10px;
 }
@@ -152,9 +152,9 @@
 }
 
 hr{
-    color: #3C4556;
+    color: #C8465F;
     display: block;
-    border-bottom: #3C4556 .5px solid;
+    border-bottom: #C8465F .5px solid;
     border-style: inset;
 }
 
@@ -184,7 +184,7 @@ hr{
 }
 
 .tHover:hover{
-    color: #8be9fd;
+    color: #ffffff;
     font-weight: bolder;
 }
 
